---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module base\n    export ~. tail\nend base\n\nmodule target\n    import tail\n    tail.truce\nend target\n"
---
"base"@(FileId(1), 7..11) [Module(No)]: <error>
"target"@(FileId(1), 48..54) [Module(No)]: <error>
"tail"@(FileId(1), 66..70) [Import]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 80..85: no field named `truce` in expression
| error in file FileId(1) for 80..85: no field named `truce` in here
